--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,10 @@ jobs:
 
         steps:
         - name: Checkout source code
-          uses: actions/checkout@v2
+          uses: actions/checkout@v4
 
         - name: Setup .NET
-          uses: actions/checkout@v2
+          uses: actions/setup-dotnet@v3
           with:
             dotnet-version: 8.0.x
 
@@ -25,7 +25,7 @@ jobs:
           run: dotnet build -c release --no-restore
 
         - name: Upload a Build Artifact
-          uses: actions/upload-artifact@v2.2.2
+          uses: actions/upload-artifact@v4
           with:
             # Artifact name
             name: GitHubActionsHelloWorldConsoleDownloadableArtifact # .zip will be added automatically
