--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,5 +61,5 @@ jobs:
           uses: actions/upload-artifact@v4
           with:
             # Artifact name
-            name: HelloWorldDebug # .zip will be added automatically
+            name: HelloWorldRelease # .zip will be added automatically
             path: bin/Release/net8.0/*.*
