--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,10 @@ jobs:
           run: dotnet bin/Debug/net8.0/Hello_Github_Actions.dll
           working-directory: Hello_Github_Actions_CS
 
+        - name: List files
+          run: ls -R
+          working-directory: Hello_Github_Actions_CS
+        
         - name: Upload a Build Artifact
           uses: actions/upload-artifact@v4
           with:
