--- a/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
+++ b/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
@@ -10,6 +10,10 @@ on:
       paths:
           - 'Hello_Actions_with_Terraform_Azure/**'
 
+permissions:
+    id-token: write
+    contents: read
+
 jobs:
     terraform:
         name: Build a debug version of the app
