--- a/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
+++ b/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
@@ -146,7 +146,8 @@ jobs:
 
         - name: Terraform Apply
           id: apply
-          if: github.ref == 'ref/heads/main' && github.event_name == 'workflow_dispatch' && ${{ github.event.inputs.terraform_operation == 'apply' }}
+          #if: github.ref == 'ref/heads/main' && github.event_name == 'workflow_dispatch' && ${{ github.event.inputs.terraform_operation == 'apply' }}
+          if: "${{ github.event.inputs.terraform_operation == 'apply' }}"
           env:
             TF_VAR_domain_pass: '${{ secrets.DOMAIN_JOIN_PASS }}'
             TF_VAR_local_pass: '${{ secrets.LOCAL_ADMIN_PASS }}'
@@ -157,7 +158,8 @@ jobs:
 
         - name: Terraform Destroy
           id: destroy
-          if: github.ref == 'ref/heads/main' && github.event_name == 'workflow_dispatch' && ${{ github.event.inputs.terraform_operation == 'destory' }}
+          #if: github.ref == 'ref/heads/main' && github.event_name == 'workflow_dispatch' && ${{ github.event.inputs.terraform_operation == 'destory' }}
+          if: "${{ github.event.inputs.terraform_operation == 'destory' }}"
           env:
             TF_VAR_domain_pass: '${{ secrets.DOMAIN_JOIN_PASS }}'
             TF_VAR_local_pass: '${{ secrets.LOCAL_ADMIN_PASS }}'
