--- a/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
+++ b/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
@@ -6,9 +6,10 @@ on:
         terraform_operation:
           description: 'Terraform Operation: apply, destory'
           required: true
-          default: 'apply'
+          default: 'plan'
           type: choice
           options:
+            - 'plan'
             - 'apply'
             - 'destroy'
 
