--- a/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
+++ b/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
@@ -90,6 +90,7 @@ jobs:
 
         - name: Terraform Plan
           id: tplan
+          if: ${{ github.event.inputs.terraform_operation == 'plan' }}
           env:
             TF_VAR_secret: '${{ secrets.example_secret }}'
           run: |
@@ -98,7 +99,7 @@ jobs:
 
         - name: Checkov Plan Test
           id: cplan
-          if: github.event_name == 'pull_request'
+          if: github.event_name == 'pull_request' && ${{ github.event.inputs.terraform_operation == 'plan' }}
           env:
             TF_VAR_secret: '${{ secrets.example_secret }}'
           run: |
@@ -147,8 +148,7 @@ jobs:
 
         - name: Terraform Apply
           id: apply
-          #if: github.ref == 'ref/heads/main' && github.event_name == 'workflow_dispatch' && ${{ github.event.inputs.terraform_operation == 'apply' }}
-          if: "${{ github.event.inputs.terraform_operation == 'apply' }}"
+          if: ${{ github.event.inputs.terraform_operation == 'apply' }}
           env:
             TF_VAR_domain_pass: '${{ secrets.DOMAIN_JOIN_PASS }}'
             TF_VAR_local_pass: '${{ secrets.LOCAL_ADMIN_PASS }}'
@@ -159,8 +159,7 @@ jobs:
 
         - name: Terraform Destroy
           id: destroy
-          #if: github.ref == 'ref/heads/main' && github.event_name == 'workflow_dispatch' && ${{ github.event.inputs.terraform_operation == 'destory' }}
-          if: "${{ github.event.inputs.terraform_operation == 'destory' }}"
+          if: ${{ github.event.inputs.terraform_operation == 'destory' }}
           env:
             TF_VAR_domain_pass: '${{ secrets.DOMAIN_JOIN_PASS }}'
             TF_VAR_local_pass: '${{ secrets.LOCAL_ADMIN_PASS }}'
