--- a/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
+++ b/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
@@ -11,7 +11,7 @@ on:
           options:
             - 'plan'
             - 'apply'
-            - 'destroy'
+            - 'destory'
 
     push:
       branches: [ main ]
