--- a/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
+++ b/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
@@ -90,7 +90,7 @@ jobs:
 
         - name: Terraform Plan
           id: tplan
-          if: ${{ github.event.inputs.terraform_operation == 'plan' }}
+          if: github.event.inputs.terraform_operation == 'plan'
           env:
             TF_VAR_secret: '${{ secrets.example_secret }}'
           run: |
@@ -99,7 +99,7 @@ jobs:
 
         - name: Checkov Plan Test
           id: cplan
-          if: "github.event_name == 'pull_request' && ${{ github.event.inputs.terraform_operation == 'plan' }}"
+          if: github.event.inputs.terraform_operation == 'plan'
           env:
             TF_VAR_secret: '${{ secrets.example_secret }}'
           run: |
