--- a/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
+++ b/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
@@ -59,12 +59,16 @@ jobs:
             cd create_tfstate_storage
             terraform init
             terraform apply -auto-approve
-            echo $(az storage account keys list --resource-group tfstate --account-name tfstateaction --query '[0].value' -o tsv)
+            ACCOUNT_KEY=$(az storage account keys list --resource-group tfstate --account-name tfstateaction --query '[0].value' -o tsv)
+            echo $ACCOUNT_KEY
+            az keyvault create --name tfstate --resource-group tfstate --location westus2
+            az keyvault secret set --vault-name tfstate --name tfstate-key --value $ACCOUNT_KEY
           working-directory: Hello_Actions_with_Terraform_Azure
 
         - name: Terraform Init
           id: init
           run: |
+            export ARM_ACCESS_KEY=$(az keyvault secret show --name tfstate-key --vault-name tfstate --query value -o tsv)
             terraform init
           working-directory: Hello_Actions_with_Terraform_Azure
 
