--- a/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
+++ b/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
@@ -64,17 +64,21 @@ jobs:
         - name: Create keyvault for tfstate
           id: create_keyvault
           if: ${{ github.event.inputs.terraform_operation == 'create_tfstate_storage' }}
+          env:
+            AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+            AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+            AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           run: |
             ACCOUNT_KEY=$(az storage account keys list --resource-group tfstate --account-name tfstateaction --query '[0].value' -o tsv)
             az keyvault create --name tfstate-githubactions --resource-group tfstate --location westus2
             az keyvault secret set --vault-name tfstate-githubactions --name tfstate-key --value $ACCOUNT_KEY
           working-directory: Hello_Actions_with_Terraform_Azure
 
-#        - name: get keyvault secret
-#          id: get_keyvault_secret
-#          run: |
-#            export ARM_ACCESS_KEY=$(az keyvault secret show --name tfstate-key --vault-name tfstate-githubactions --query value -o tsv)
-#          working-directory: Hello_Actions_with_Terraform_Azure
+        - name: get keyvault secret
+          id: get_keyvault_secret
+          run: |
+            export ARM_ACCESS_KEY=$(az keyvault secret show --name tfstate-key --vault-name tfstate-githubactions --query value -o tsv)
+          working-directory: Hello_Actions_with_Terraform_Azure
 
         - name: Terraform Init
           id: init
