--- a/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
+++ b/.github/workflows/Hello_Actions_with_Terraform_Azure_build.yml
@@ -23,6 +23,11 @@ permissions:
     id-token: write
     contents: read
 
+env:
+  ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+
 jobs:
     terraform:
         name: Build a debug version of the app
@@ -37,6 +42,7 @@ jobs:
           id: login
           uses: azure/login@v2
           with:
+#            creds: ${{ secrets.AZURE_CREDENTIALS }}
             client-id: ${{ secrets.AZURE_CLIENT_ID }}
             tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
@@ -78,10 +84,6 @@ jobs:
 
         - name: Terraform Init
           id: init
-          env:
-            AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-            AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-            AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           run: |
             terraform init
           working-directory: Hello_Actions_with_Terraform_Azure
